# rustfmt_if_chain

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  taplo.toml
.github/workflows/: ci.yml  update_supply_chain.yml
examples/: after.rs  before.rs  let_after.rs  let_before.rs
src/: backup.rs  failed_to.rs  main.rs  rewriter.rs
src/offset_based_rewriter/: impls.rs  mod.rs
src/offset_calculator/: impls.rs  mod.rs
tests/: ci.rs  clippy.rs  dogfood.rs  example.rs  format_clippy.rs  meta.rs  publishers.txt  supply_chain.json
