[package]
name = "rustfmt_if_chain"
version = "0.1.7"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "An if_chain-aware rustfmt (kind of)"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/smoelius/rustfmt_if_chain"
autoexamples = false

[dependencies]
anyhow = "1.0"
cast_checks = "0.1"
if_chain = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
sedregex = "0.2"
syn = { version = "2.0", features = ["full", "visit"] }
tempfile = "3.6"

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
ctor = "0.2"
predicates = "3.0"
regex = "1.9"
serde_json = "1.0"
similar-asserts = "1.4"
walkdir = "2.3"

[features]
all-checks = ["check-offsets", "check-rewrites", "check-spans"]
check-offsets = []
check-rewrites = []
check-spans = []
ci = []

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/general/non_thread_safe_call_in_test" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/supplementary/unnecessary_conversion_for_trait" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/collapsible_unwrap" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/const_path_join" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/misleading_variable_name" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/question_mark_in_expression" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/try_io_result" },
]
